# cglinalg

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  rustfmt.toml
benches/: bench_cast.rs  bench_matrix.rs  bench_matrix_mul.rs  bench_quaternion.rs  bench_swap_rows.rs  bench_transpose_mut.rs  bench_vector.rs
crates/cglinalg_complex/: Cargo.toml
crates/cglinalg_complex/src/: lib.rs
crates/cglinalg_complex/tests/: spec_complex.rs  test_complex.rs
crates/cglinalg_core/: Cargo.toml
crates/cglinalg_core/benches/: bench_matrix.rs  bench_matrix_mul.rs  bench_quaternion.rs  bench_vector.rs
crates/cglinalg_core/src/: angle.rs  complex.rs  complex_normed_impl.rs  complex_ops.rs  constraint.rs  constraints.rs  coordinates.rs  euler.rs  lib.rs  magnitude.rs  matrix.rs  matrix_euler.rs  norm.rs  normed.rs  point.rs  quaternion.rs  unit.rs  vector.rs
crates/cglinalg_core/src/core_numeric/: simd.rs
crates/cglinalg_core/tests/: spec_angle.rs  spec_complex.rs  spec_euler.rs  spec_matrix.rs  spec_matrix_vector.rs  spec_point.rs  spec_quaternion.rs  spec_unit.rs  spec_vector.rs  test_angle.rs  test_complex.rs  test_euler.rs  test_matrix.rs  test_point.rs  test_quaternion.rs  test_unit.rs  test_vector.rs
crates/cglinalg_internal/: Cargo.toml
crates/cglinalg_internal/src/: lib.rs
crates/cglinalg_numeric/: Cargo.toml
crates/cglinalg_numeric/src/: lib.rs
crates/cglinalg_transform/: Cargo.toml
crates/cglinalg_transform/src/: isometry.rs  isometry_ops.rs  lib.rs  projection.rs  reflection.rs  rotation.rs  scale.rs  shear.rs  similarity.rs  transform.rs  transform_ops.rs  translation.rs
crates/cglinalg_transform/tests/: spec_isometry.rs  spec_projection.rs  spec_reflection.rs  spec_rotation.rs  spec_scale.rs  spec_shear.rs  spec_similarity.rs  spec_transform.rs  spec_translation.rs  test_isometry.rs  test_projection.rs  test_reflection.rs  test_rotation.rs  test_scale.rs  test_shear.rs  test_similarity.rs  test_translation.rs
crates/cglinalg_trigonometry/: Cargo.toml
crates/cglinalg_trigonometry/src/: lib.rs
crates/cglinalg_trigonometry/tests/: spec_angle.rs  test_angle.rs
src/: affine.rs  affine_transform.rs  affine_transformation.rs  angle.rs  array.rs  base.rs  cgmath.rs  complex.rs  coordinates.rs  euler.rs  glm.rs  identity.rs  isometry.rs  lib.rs  magnitude.rs  matrix.rs  point.rs  prelude.rs  projection.rs  quaternion.rs  reflection.rs  rotation.rs  scalar.rs  scale.rs  shear.rs  similarity.rs  structure.rs  traits.rs  transform.rs  translation.rs  unit.rs  vector.rs  vector1.rs  vector2.rs
src/affine/: identity.rs  mod.rs  reflection.rs  rotation.rs  scale.rs  shear.rs  transform.rs  translation.rs
src/angle/: angle.rs  mod.rs
src/array/: mod.rs
src/base/: angle.rs  complex.rs  coordinates.rs  euler.rs  magnitude.rs  matrix.rs  mod.rs  point.rs  quaternion.rs  unit.rs  vector.rs
src/base_numeric/: mod.rs
src/cglinalg_core/: angle.rs  complex.rs  euler.rs  magnitude.rs  matrix.rs  point.rs  quaternion.rs  unit.rs  vector.rs
src/cglinalg_transform/: isometry.rs  projection.rs  reflection.rs  rotation.rs  scale.rs  shear.rs  similarity.rs  transform.rs  translation.rs
src/common/: coordinates.rs  magnitude.rs  scalar.rs  unit.rs
src/complex/: complex.rs  mod.rs
src/core2/: matrix.rs  mod.rs  point.rs  quaternion.rs  vector.rs
src/core_numeric/: simd.rs
src/euler/: euler.rs  mod.rs
src/linalg/: angle.rs  complex.rs  euler.rs  magnitude.rs  matrix.rs  point.rs  quaternion.rs  unit.rs  vector.rs
src/matrix/: array.rs  matrix.rs  matrix_assign_ops.rs  matrix_binary_ops.rs  matrix_interpolate.rs  matrix_matrix_binary_ops.rs  matrix_matrix_mul_ops.rs  matrix_matrix_ops.rs  matrix_scalar_binary_ops.rs  matrix_scalar_ops.rs  matrix_unary_ops.rs  matrix_vector_mul_ops.rs  mod.rs  scalar_matrix_mul_ops.rs
src/transform/: isometry.rs  mod.rs  projection.rs  reflection.rs  rotation.rs  scale.rs  shear.rs  similarity.rs  transform.rs  transformation.rs  translation.rs
src/vector/: mod.rs  vector.rs
tests/: spec_angle.rs  spec_complex.rs  spec_matrix.rs  spec_point.rs  spec_projection.rs  spec_quaterion.rs  spec_quaternion.rs  spec_vector.rs  test_angle.rs  test_complex.rs  test_euler.rs  test_glm.rs  test_isometry.rs  test_matrix.rs  test_point.rs  test_projection.rs  test_quaternion.rs  test_reflection.rs  test_rotation.rs  test_scale.rs  test_shear.rs  test_similarity.rs  test_translation.rs  test_unit.rs  test_vector.rs  vector.proptest-regressions  vector.rs
