[package]
name = "cglinalg"
version = "0.15.4"
edition = "2021"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
description = "A low-dimensional linear algebra library for real-time computer graphics."
categories = [
    "graphics",
    "mathematics",
    "game-development",
    "game-engines",
    "no_std"
]
keywords = [
    "graphics", 
    "linear-algebra", 
    "quaternion", 
    "matrix",
    "vector"
]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/lambdaxymox/cglinalg"

[lib]
name = "cglinalg"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[features]
default = []

[dependencies.approx]
version = "0.5.1"
default-features = false

[dependencies.num-traits]
version = "0.2.14"
default-features = false
features = ["libm"]

[dev-dependencies]
proptest = "1.0.0"
criterion = "0.3.5"
rand = "0.8.5"
rand_isaac = "0.3.0"

[profile.release]
opt-level = 2

[profile.test]
# Disable overflow checks during testing since overflowing in integer operations
# is desireable behavior in debug mode.
overflow-checks = false

[[bench]]
name = "bench_vector"
harness = false

[[bench]]
name = "bench_matrix"
harness = false

[[bench]]
name = "bench_matrix_mul"
harness = false

[[bench]]
name = "bench_quaternion"
harness = false

