[package]
name = "cglinalg"
version = "0.17.0"
edition = "2021"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
description = "A low-dimensional linear algebra library for real-time computer graphics."
categories = [
    "graphics",
    "mathematics",
    "game-development",
    "game-engines",
    "no_std"
]
keywords = [
    "graphics", 
    "linear-algebra", 
    "quaternion", 
    "matrix",
    "vector"
]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/lambdaxymox/cglinalg"

[lib]
name = "cglinalg"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[workspace]
members = [
    "crates/*"
]

[features]
default = ["std"]
# Option: "core" is a platform-agnostic option that works in environments that cannot
# allocate memory. The environment needs to supply its own implementations of 
# `eh_personality`.
core = []
# Option: "alloc" enables support for environments that can allocate memory 
# but don't use the full standard library.
alloc = []
# Option: "std" enables support for environments that use the full standard library.
std = []

[dependencies]

[dependencies.cglinalg_numeric]
path = "crates/cglinalg_numeric"
version = "0.17.0"

[dependencies.cglinalg_trigonometry]
path = "crates/cglinalg_trigonometry"
version = "0.17.0"

[dependencies.cglinalg_complex]
path = "crates/cglinalg_complex"
version = "0.17.0"

[dependencies.cglinalg_core]
path = "crates/cglinalg_core"
version = "0.17.0"

[dependencies.cglinalg_transform]
path = "crates/cglinalg_transform"
version = "0.17.0"

[dependencies.approx]
version = "0.5.1"
default-features = false

[dependencies.num-traits]
version = "0.2.16"
default-features = false
features = ["libm"]

[dev-dependencies]
proptest = "1.2.0"
criterion = "0.5.1"
rand = "0.8.5"
rand_isaac = "0.3.0"

[profile.release]
opt-level = 2

[profile.test]
# Disable overflow checks during testing since overflowing in integer operations
# is desireable behavior in debug mode.
overflow-checks = false

