[package]
name = "cglinalg_internal"
version = "0.16.10"
edition = "2021"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
description = "A low-dimensional linear algebra library for real-time computer graphics."
categories = [
    "graphics",
    "mathematics",
    "game-development",
    "game-engines",
    "no_std"
]
keywords = [
    "graphics", 
    "linear-algebra", 
    "quaternion", 
    "matrix",
    "vector"
]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/lambdaxymox/cglinalg"

[features]

[dependencies]

[dependencies.cglinalg_core]
path = "../cglinalg_core"
version = "0.16.10"
